https://github.com/jessesoutherland/StoreFront.git

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <div>
         <nav id="utilityMenu">
             <input type="search" id="search" placeholder="Search">
+            <button type="submit">Search</button>
         </nav>
         <!-- Navigation Menu -->
         <h1>Music</h1>
